Added test dataset and relative paths
Test dataset (VBh_converted.h5ad) added. Referenced now via relative paths

--- a/pytometry/HSNE/NewTechniqueSearchNB.ipynb
+++ b/pytometry/HSNE/NewTechniqueSearchNB.ipynb
@@ -15,7 +15,7 @@
     "import time as time\n",
     "\n",
     "# Load Dataset\n",
-    "filelocation = r\"/home/felix/Public/datasets/VBh_converted.h5ad\"\n",
+    "filelocation = r\"../datasets/VBh_converted.h5ad\"\n",
     "adata = anndata.read_h5ad(filelocation)\n",
     "\n",
     "# subsampling\n",
