--- a/pytometry/HSNE/test/NewTechniqueSearchNB.ipynb
+++ b/pytometry/HSNE/test/NewTechniqueSearchNB.ipynb
@@ -3,19 +3,34 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "incident-trailer",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/anaconda3/lib/python3.7/site-packages/anndata/_core/anndata.py:21: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
+      "  from pandas.core.index import RangeIndex\n"
+     ]
+    }
+   ],
    "source": [
+    "# add parent directory to path for importing HSNE modules\n",
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "\n",
     "import scanpy as sc\n",
     "import anndata\n",
-    "import pl as pl\n",
-    "import tl as tl\n",
+    "import plotting as pl\n",
+    "import tools as tl\n",
     "import numpy as np\n",
     "import time as time\n",
     "\n",
     "# Load Dataset\n",
-    "filelocation = r\"../datasets/VBh_converted.h5ad\"\n",
+    "filelocation = r\"datasets/VBh_converted.h5ad\"\n",
     "adata = anndata.read_h5ad(filelocation)\n",
     "\n",
     "# subsampling\n",
@@ -31,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "alternate-providence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "matched-reggae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "formal-model",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "psychological-budget",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,19 +166,19 @@
      "text": [
       "--NEW--\n",
       "shape: (12946, 12946)\n",
-      "length: 348060\n",
-      "sum of data: 12945.999977793294\n",
-      "sum first row P 7.91304182073036e-05\n",
-      "sum first row T 0.9999999031424522\n",
-      "time: 0.2500941753387451\n",
+      "length: 348030\n",
+      "sum of data: 12945.99999087235\n",
+      "sum first row P 7.912657000918663e-05\n",
+      "sum first row T 1.0000000521540642\n",
+      "time: 1.366792917251587\n",
       "\n",
       "--OLD--\n",
       "shape: (12946, 12946)\n",
       "length: 245974\n",
-      "sum of data: 12946.000000000104\n",
-      "sum first row P 8.1265291833673e-05\n",
-      "sum first row T 0.9999999999999996\n",
-      "time: 1.2834646701812744\n",
+      "sum of data: 12945.99999999991\n",
+      "sum first row P 8.126529182022665e-05\n",
+      "sum first row T 0.9999999999999999\n",
+      "time: 8.002951622009277\n",
       "\n"
      ]
     }
@@ -195,7 +206,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "backed-binding",
    "metadata": {},
    "outputs": [
     {
@@ -203,12 +213,12 @@
      "output_type": "stream",
      "text": [
       "Old\n",
-      "0.9999999031424522\n",
-      "0.23137875\n",
+      "1.0000000521540642\n",
+      "0.23137873\n",
       "\n",
       "New\n",
-      "0.9999999999999996\n",
-      "0.05415735187671186\n"
+      "0.9999999999999999\n",
+      "0.05415735182233375\n"
      ]
     }
    ],
@@ -226,7 +236,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "difficult-abraham",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -248,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
