--- a/pytometry/HSNE/test/hsne_test_notebook.ipynb
+++ b/pytometry/HSNE/test/hsne_test_notebook.ipynb
@@ -9,16 +9,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Bad key \"text.kerning_factor\" on line 4 in\n",
-      "/home/felix/anaconda3/envs/pytometry/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.1.2/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
+      "/home/felix/anaconda3/lib/python3.7/site-packages/anndata/_core/anndata.py:21: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
+      "  from pandas.core.index import RangeIndex\n"
      ]
     }
    ],
    "source": [
+    "# add parent directory to path for importing HSNE modules\n",
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "    \n",
     "import scanpy as sc\n",
     "import anndata\n",
     "import plotting as pl\n",
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filelocation =  r\"../datasets/VBh_converted.h5ad\"\n",
+    "filelocation =  r\"datasets/VBh_converted.h5ad\"\n",
     "adata = anndata.read_h5ad(filelocation)"
    ]
   },
@@ -351,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
