Copy _humap function from JN to _humap.py

--- a/pytometry/HUMAP/test/newTechniqueTestNB.ipynb
+++ b/pytometry/HUMAP/test/newTechniqueTestNB.ipynb
@@ -99,7 +99,12 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def _humap(adata, n_scales: int = 1, subs_mode: str = \"knee\", factor: float = 0.5, n_knn: 20, copy: bool = False, verbose: bool = False):\n",
+    "def _humap(adata, n_scales: int = 1, \n",
+    "           subs_mode: str = \"knee\", \n",
+    "           factor: float = 0.5, \n",
+    "           n_knn: 20, \n",
+    "           copy: bool = False, \n",
+    "           verbose: bool = False):\n",
     "    \n",
     "    # check if knn graph has been calculated beforehand\n",
     "    assert 'connectivities' in adata.obsp.keys(), \"No knn graph found. Calculate with scanpy.tl.neighbors(...)\"\n",
@@ -167,6 +172,7 @@
    "outputs": [],
    "source": [
     "def calcStationaryDistribution(connectivities):\n",
+    "    \n",
     "    # transition matrix\n",
     "    T = connectivities.multiply(csr_matrix(1.0 / np.abs(connectivities).sum(1)))\n",
     "    D, V = eigs(T.T, which='LM')\n",
@@ -194,7 +200,10 @@
     "- \"knee\"\n",
     "- \"factor\"\n",
     "'''\n",
-    "def findCuttingPoint(eigValues, mode: str = \"window\", factor: float = 1):\n",
+    "def findCuttingPoint(eigValues, \n",
+    "                     mode: str = \"window\", \n",
+    "                     factor: float = 1):\n",
+    "    \n",
     "    pi = eigValues[eigValues.argsort()][::-1]\n",
     "    cutPoint = len(pi)\n",
     "    \n",
