--- a/pytometry/Tutorials/converter_tutorial.ipynb
+++ b/pytometry/Tutorials/converter_tutorial.ipynb
@@ -15,26 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "MODULE_FULL_PATH = '/home/thomas/PycharmProjects/pytometry'\n",
-    "sys.path.insert(1, MODULE_FULL_PATH)\n",
+    "import pytometry\n",
     "\n",
     "from pytometry.converter import fileconverter\n",
-    "from pytometry.Preprocessing import process_data\n"
+    "from pytometry.preprocessing import process_data\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -98,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -152,9 +146,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytometry2",
+   "display_name": "pyto_dev",
    "language": "python",
-   "name": "pytometry2"
+   "name": "pyto_dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
